--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gdax-client"]
-	path = gdax-client
-	url = git@github.com:roudy16/gdax-client.git
+[submodule "gdax_client"]
+	path = gdax_client
+	url = git@github.com:roudy16/gdax_client.git
