--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde_json = "1.0.20"
 chrono = { version = "0.4.2", features = ["serde"] }
 curl = "0.4.12"
 postgres = "0.15.2"
+gdax_client = { path = "gdax_client" , version = "1.1.0" }
